--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,4 @@
+# Hello world!
 = Spinnaker UI
 
 image::https://api.travis-ci.org/spinnaker/deck.svg?branch=master["Build Status", link="https://travis-ci.org/spinnaker/deck"]
